# index-iterator

./: CMakeLists.txt  README.md
index-iterator/: CMakeLists.txt
index-iterator/include/: index-iterator.hpp
index-iterator/include/detail/: iter_and_index_wrapper.hpp
test/: CMakeLists.txt  test1.cpp
